--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -6,15 +6,15 @@ spring:
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://localhost:3306/wms?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&rewriteBatchedStatements=true
-                username:
-                password:
+                url: jdbc:mysql://rm-bp1ax85l1td3c133uho.mysql.rds.aliyuncs.com:3306/whse?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&rewriteBatchedStatements=true
+                username: root
+                password: 1qaz@WSX
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
                 enabled: false
-                url: 
-                username: 
+                url:
+                username:
                 password:
             statViewServlet:
                 # 控制台管理用户名和密码
@@ -23,13 +23,13 @@ spring:
     # redis 配置
     redis:
         # 地址
-        host: localhost
+        host: r-bp1kwhs0wjxh78tz4zpd.redis.rds.aliyuncs.com
         # 端口，默认为6379
         port: 6379
         # 数据库索引
         database: 1
         # 密码
-        password:
+        password: 1qaz@WSX
 ruoyi:
     # 文件路径 示例（ Windows配置D:/ruoyi/uploadPath，Linux配置 /home/ruoyi/uploadPath）
     profile: C:/ruoyi/uploadPath
